updated link to first-quiz

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
   <h1>Space Jam 4 Ever!</h1>
+  <a href="http://corytohill.github.io/first-quiz/" title="cssQuiz"></a>
+  <!-- <a href="" title="chatty"></a> -->
 </body>
 </html>
