--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Space Jam 4 Ever!</h1>
-  <a href="http://corytohill.github.io/first-quiz/" title="cssQuiz"></a>
-  <!-- <a href="" title="chatty"></a> -->
+  <h1>Cory Tohill's NSS Projects</h1>
+  <div id="projectLinks">
+    <a href="http://corytohill.github.io/first-quiz/" title="cssQuiz">First CSS Quiz</a>
+    <a href="http://corytohill.github.io/spa-group-chatty-cds/" title="chatty">Chatty Group Project</a>
+  </div>
 </body>
 </html>
