--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Cory Tohill</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,10 +71,10 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Cory Tohill</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <p>Software Developer</p>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">About Me</a>
             </div>
         </div>
     </header>
@@ -83,9 +83,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">About Me</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">Tennessee native, former chef, and software developer, I hope to contribute to the development community while continuing to learn and improve my skills.</p>
+                    <p class="text-faded">I have always loved learning and mastering new skills, which is what originally drew me to cooking as a profession. I moved to San Francisco and attended culinary school at City College of San Francisco. After six years in the food industry, I had worked my way up to executive chef, but I decided it was time for a change.</p>
+                    <p class="text-faded">I moved back home to attend Nashville Software School and study full stack web development. I've never enjoyed learning a new skill as much as I do now. Whether it's new technologies to learn, more effecient ways to solve problems, or new syntax/techniques to use, there is always more to learn and improve on in a community driven industry.</p>
+                    <p class="text-faded">The ability to explore how things work, look up alternative solutions to problems, have access to tutorials and learning materials, and receive help from the community at large are things that don't exist in most other industries, and it's what drives me to be the best developer that I can be.</p>
+
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
