--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,10 @@
     <!-- Theme CSS -->
     <link href="css/creative.min.css" rel="stylesheet">
 
+    <!-- Main CSS -->
+    <link href="css/main.css" rel="stylesheet">
+
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -53,7 +57,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Technologies</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -100,39 +104,131 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Technologies</h2>
                     <hr class="primary">
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <img class="techImages" src="img/tech-angular.png"></img>
+                        <h3>AngularJS</h3>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <img class="techImages" src="img/tech-api.png"></img>
+                        <h3>APIs</h3>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                 <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <img class="techImages" src="img/tech-bootstrap.png"></img>
+                        <h3>Bootstrap</h3>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <img class="techImages" src="img/tech-bower.png"></img>
+                        <h3>Bower</h3>
+                    </div>
+                </div>
+                 <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-css.png"></img>
+                        <h3>CSS</h3>
+                    </div>
+                </div>
+                 <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-django.jpg"></img>
+                        <h3>Django</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-django-rest.png"></img>
+                        <h3>Django REST</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-firebase.png"></img>
+                        <h3>Firebase</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-github.png"></img>
+                        <h3>GitHub</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-gulp.png"></img>
+                        <h3>Gulp</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-html.png"></img>
+                        <h3>Html5</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-jasmine.png"></img>
+                        <h3>Jasmine</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-javascript.png"></img>
+                        <h3>Javascript</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-jquery.png"></img>
+                        <h3>jQuery</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-json.png"></img>
+                        <h3>JSON</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-npm.png"></img>
+                        <h3>NPM</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-python.png"></img>
+                        <h3>Python</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-sass.png"></img>
+                        <h3>Sass</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-sql.png"></img>
+                        <h3>Sequel</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img class="techImages" src="img/tech-sqlite.png"></img>
+                        <h3>SQLite</h3>
                     </div>
                 </div>
             </div>
