--- a/src/index.html
+++ b/src/index.html
@@ -361,21 +361,15 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2 class="modal-titles">BirdyBoard</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <a href="https://github.com/nss-day-cohort-13/bangazon-CoryTohill">
+                            <img src="img/portfolio/fullsize/birdyboard-screen-shot.png" class="img-responsive img-centered" alt=""></a>
+                            <p>Flavorize is a recipe building app designed for use by both professional chefs and at home cooks. Users can view recipes created by others, create their own recipes, get food pairing suggestions based what ingredients they use, and get nutritional information on both a per recipe and per serving level. Users can also upload images of their recipes, as well as edit or delete their own recipes.</p>
+                            <p>Technologies used: AngularJS, Bootstrap, Firebase, Foodpairing and National Nutirent Database APIs, CSS3, HTML5, Javascript</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>View on GitHub:
+                                    <strong><a href="https://github.com/nss-day-cohort-13/bangazon-CoryTohill">github.com/nss-day-cohort-13/bangazon-CoryTohill</a>
                                     </strong>
                                 </li>
                             </ul>
