added links, images, and description for Chatty project

--- a/src/index.html
+++ b/src/index.html
@@ -272,40 +272,11 @@
                         <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
+                                    <h3>Message Board Group Project</h3>
+                                    <h2>Chatty!</h2>
                                 </div>
                             </div>
-                            <img src="img/portfolio/circus.png" class="img-responsive" alt="">
-                        </a>
-                    </div>
-                    <div class="col-sm-4 portfolio-item">
-                        <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
-                                </div>
-                            </div>
-                            <img src="img/portfolio/game.png" class="img-responsive" alt="">
-                        </a>
-                    </div>
-                    <div class="col-sm-4 portfolio-item">
-                        <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
-                                </div>
-                            </div>
-                            <img src="img/portfolio/safe.png" class="img-responsive" alt="">
-                        </a>
-                    </div>
-                    <div class="col-sm-4 portfolio-item">
-                        <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
-                                </div>
-                            </div>
-                            <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
+                            <img src="img/portfolio/fullsize/chatty-screen-shot.png" class="img-responsive port-img" alt="">
                         </a>
                     </div>
                 </div>
@@ -331,7 +302,7 @@
                             <a href="http://corytohill.github.io/flavorize/#/">
                             <img src="img/portfolio/fullsize/flavorize-screen-shot.png" class="img-responsive img-centered" alt=""></a>
                             <p>Flavorize is a recipe building app designed for use by both professional chefs and at home cooks. Users can view recipes created by others, create their own recipes, get food pairing suggestions based what ingredients they use, and get nutritional information on both a per recipe and per serving level. Users can also upload images of their recipes, as well as edit or delete their own recipes.</p>
-                            <p>Technologies used: AngularJS, Bootstrap, Firebase, Foodpairing and National Nutirent Database APIs, CSS3, HTML5, Javascript</p>
+                            <p>Technologies used: AngularJS, Bootstrap, Firebase, Foodpairing and National Nutirent Database APIs, CSS, HTML, Javascript</p>
                             <ul class="list-inline item-details">
                                 <li>Live Demo:
                                     <strong><a href="http://corytohill.github.io/flavorize/#/">corytohill.github.io/flavorize/</a>
@@ -366,7 +337,7 @@
                             <a href="https://github.com/nss-day-cohort-13/bangazon-CoryTohill">
                             <img src="img/portfolio/fullsize/birdyboard-screen-shot.png" class="img-responsive img-centered" alt=""></a>
                             <p>Flavorize is a recipe building app designed for use by both professional chefs and at home cooks. Users can view recipes created by others, create their own recipes, get food pairing suggestions based what ingredients they use, and get nutritional information on both a per recipe and per serving level. Users can also upload images of their recipes, as well as edit or delete their own recipes.</p>
-                            <p>Technologies used: AngularJS, Bootstrap, Firebase, Foodpairing and National Nutirent Database APIs, CSS3, HTML5, Javascript</p>
+                            <p>Technologies used: AngularJS, Bootstrap, Firebase, Foodpairing and National Nutirent Database APIs, CSS, HTML, Javascript</p>
                             <ul class="list-inline item-details">
                                 <li>View on GitHub:
                                     <strong><a href="https://github.com/nss-day-cohort-13/bangazon-CoryTohill">github.com/nss-day-cohort-13/bangazon-CoryTohill</a>
@@ -392,21 +363,19 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2 class="modal-titles">Chatty!</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <a href="http://corytohill.github.io/spa-group-chatty-cds/">
+                            <img src="img/portfolio/fullsize/chatty-screen-shot.png" class="img-responsive img-centered" alt=""></a>
+                            <p>Chatty is a message board application. It was given as a Nashville Software School group assignment and was our first introduction to reading information from JSON files. Users are presented with pre-written messages when the app first loads. They can create their own messages, delete individual messages, delete all messages, and select between different style options.</p>
+                            <p>Technologies used: HTML, CSS, jQuery, Javascript, Gulp, and JSON</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Live Demo:
+                                    <strong><a href="http://corytohill.github.io/spa-group-chatty-cds/">corytohill.github.io/spa-group-chatty-cds/</a>
                                     </strong>
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>View on GitHub:
+                                    <strong><a href="https://github.com/CoryTohill/spa-group-chatty-cds">github.com/CoryTohill/spa-group-chatty-cds</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -417,7 +386,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -454,80 +423,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+ -->
 
     <aside class="bg-dark">
         <div class="container text-center">
