removed unnecessary info and buttons

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,6 @@
                 <h1 id="homeHeading">Cory Tohill</h1>
                 <hr>
                 <p>Software Developer</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">About Me</a>
             </div>
         </div>
     </header>
@@ -94,7 +93,6 @@
                     <p class="text-faded">I moved back home to attend Nashville Software School and study full stack web development. I've never enjoyed learning a new skill as much as I do now. Whether it's new technologies to learn, more effecient ways to solve problems, or new syntax/techniques to use, there is always more to learn and improve on in a community driven industry.</p>
                     <p class="text-faded">The ability to explore how things work, look up alternative solutions to problems, have access to tutorials and learning materials, and receive help from the community at large are things that don't exist in most other industries, and it's what drives me to be the best developer that I can be.</p>
 
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
         </div>
@@ -336,11 +334,11 @@
                             <hr class="star-primary">
                             <a href="https://github.com/nss-day-cohort-13/bangazon-CoryTohill">
                             <img src="img/portfolio/fullsize/birdyboard-screen-shot.png" class="img-responsive img-centered" alt=""></a>
-                            <p>Flavorize is a recipe building app designed for use by both professional chefs and at home cooks. Users can view recipes created by others, create their own recipes, get food pairing suggestions based what ingredients they use, and get nutritional information on both a per recipe and per serving level. Users can also upload images of their recipes, as well as edit or delete their own recipes.</p>
-                            <p>Technologies used: AngularJS, Bootstrap, Firebase, Foodpairing and National Nutirent Database APIs, CSS, HTML, Javascript</p>
+                            <p>BirdyBoard is a single line message board application built in Python. Users can register profiles, select which profile they want to log in as, view and send both public and private messages.</p>
+                            <p>Technologies used: Python</p>
                             <ul class="list-inline item-details">
                                 <li>View on GitHub:
-                                    <strong><a href="https://github.com/nss-day-cohort-13/bangazon-CoryTohill">github.com/nss-day-cohort-13/bangazon-CoryTohill</a>
+                                    <strong><a href="https://github.com/CoryTohill/birdyboard">github.com/CoryTohill/birdyboard</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -425,30 +423,28 @@
     </div>
  -->
 
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
-            </div>
-        </div>
-    </aside>
-
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">Contact</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <div class="col-md-3 col-sm-6 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                    <p>615-545-9288</p>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-md-3 col-sm-6 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:corytohill@gmail.com">corytohill@gmail.com</a></p>
+                </div>
+                <div class="col-md-3 col-sm-6 text-center">
+                    <i class="fa fa-github fa-3x sr-contact"></i>
+                    <p><a href="https://github.com/CoryTohill">github.com/CoryTohill</a></p>
+                </div>
+                <div class="col-md-3 col-sm-6 text-center">
+                    <i class="fa fa-linkedin fa-3x sr-contact"></i>
+                    <p><a href="https://www.linkedin.com/in/cory-tohill">linkedin.com/in/cory-tohill</a></p>
                 </div>
             </div>
         </div>
