--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <div class="col-xs-12 text-center">
+                        <img class="img-responsive center-block profile-img" src="img/portfolio/cory-profile.png" alt="profile picture">
+                    </div>
                     <h2 class="section-heading">About Me</h2>
                     <hr class="light">
                     <p class="text-faded">Tennessee native, former chef, and software developer, I hope to contribute to the development community while continuing to learn and improve my skills.</p>
