--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                             <a href="http://corytohill.github.io/flavorize/#/">
                             <img src="img/portfolio/fullsize/flavorize-screen-shot.png" class="img-responsive img-centered" alt=""></a>
                             <p>Flavorize is a recipe building app designed for use by both professional chefs and at home cooks. Users can view recipes created by others, create their own recipes, get food pairing suggestions based what ingredients they use, and get nutritional information on both a per recipe and per serving level. Users can also upload images of their recipes, as well as edit or delete their own recipes.</p>
-                            <p>Technologies used: AngularJS, Bootstrap, Firebase, Foodpairing and National Nutirent Database APIs, CSS, HTML, Javascript</p>
+                            <p>Technologies used: AngularJS, Bootstrap, Firebase, Foodpairing and National Nutrient Database APIs, CSS, HTML, Javascript</p>
                             <ul class="list-inline item-details">
                                 <li>Live Demo:
                                     <strong><a href="http://corytohill.github.io/flavorize/#/">corytohill.github.io/flavorize/</a>
