fixed wording for birdyboard

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                             <hr class="star-primary">
                             <a href="https://github.com/CoryTohill/birdyboard">
                             <img src="img/portfolio/fullsize/birdyboard-screen-shot.png" class="img-responsive img-centered" alt=""></a>
-                            <p>BirdyBoard is a single line message board application built in Python. Users can register profiles, select which profile they want to log in as, view and send both public and private messages.</p>
+                            <p>BirdyBoard is a command line message board application built in Python. Users can register profiles, select which profile they want to log in as, view and send both public and private messages.</p>
                             <p>Technologies used: Python</p>
                             <ul class="list-inline item-details">
                                 <li>View on GitHub:
