--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <hr class="light">
                     <p class="text-faded">Tennessee native, former chef, and software developer, I hope to contribute to the development community while continuing to learn and improve my skills.</p>
                     <p class="text-faded">I have always loved learning and mastering new skills, which is what originally drew me to cooking as a profession. I moved to San Francisco and attended culinary school at City College of San Francisco. After six years in the food industry, I had worked my way up to executive chef, but I decided it was time for a change.</p>
-                    <p class="text-faded">I moved back home to attend Nashville Software School and study full stack web development. I've never enjoyed learning a new skill as much as I do now. Whether it's new technologies to learn, more effecient ways to solve problems, or new syntax/techniques to use, there is always more to learn and improve on in a community driven industry.</p>
+                    <p class="text-faded">I moved back home to attend Nashville Software School and study full stack web development. I've never enjoyed learning a new skill as much as I do now. Whether it's new technologies to learn, more efficient ways to solve problems, or new syntax/techniques to use, there is always more to learn and improve on in a community driven industry.</p>
                     <p class="text-faded">The ability to explore how things work, look up alternative solutions to problems, have access to tutorials and learning materials, and receive help from the community at large are things that don't exist in most other industries, and it's what drives me to be the best developer that I can be.</p>
 
                 </div>
